--- a/Capstone2/Base.lproj/Main.storyboard
+++ b/Capstone2/Base.lproj/Main.storyboard
@@ -657,25 +657,32 @@ Combined. This is a mix of inattentive symptoms and hyperactive/impulsive sympto
             </objects>
             <point key="canvasLocation" x="4374" y="148"/>
         </scene>
-        <!--View Controller-->
+        <!--Family Therapy-->
         <scene sceneID="kwF-wD-xCG">
             <objects>
-                <viewController id="dwj-oI-4ac" sceneMemberID="viewController">
+                <viewController id="dwj-oI-4ac" customClass="familyTherapy" customModule="Capstone2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="knF-Pr-T6L">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kro-rt-ypb">
-                                <rect key="frame" x="143" y="294" width="106" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Watch Video"/>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Tmg-fi-7OF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Mg1-m1-Lhy"/>
+                    <navigationItem key="navigationItem" id="Mg1-m1-Lhy">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="U2F-xS-Kgn">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Kro-rt-ypb">
+                                <rect key="frame" x="253.33333333333334" y="5" width="120.66666666666666" height="34.333333333333336"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Watch Video"/>
+                                <connections>
+                                    <action selector="videoTapped:" destination="dwj-oI-4ac" eventType="touchUpInside" id="EbG-uw-PL8"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="watchVideo" destination="Kro-rt-ypb" id="Bhj-ld-EJj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y08-Qt-v8w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
